fix z-index

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -20,6 +20,7 @@ body {
 
 .models-list.open {
     opacity: 0.7;
+    z-index: 1000;
 }
 
 .models-list ul {
@@ -115,9 +116,6 @@ body {
     background-color: black;
 
     transform: rotate(0);
-}
-
-.models-list-open:hover {
 }
 
 .preloader-blur {
